--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <organization>
         <name>HERE Technologies</name>
     </organization>
+
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
@@ -33,9 +34,11 @@
     </modules>
 
     <scm>
-        <connection>scm:git:ssh://gerrit.it.here.com:29418/pa-limerick/artifact/maven-wagon</connection>
-        <tag>HEAD</tag>
+      <connection>scm:git:https://github.com/heremaps/here-artifact-maven-wagon.git</connection>
+      <developerConnection>scm:git:git@github.com:heremaps/here-artifact-maven-wagon.git</developerConnection>
+      <url>https://github.com/heremaps/here-artifact-maven-wagon</url>
     </scm>
+
     <distributionManagement>
         <repository>
             <id>here-olp-sit</id>
@@ -49,5 +52,4 @@
         <java.version>1.8</java.version>
         <here.olp.sit>https://artifactory.in.here.com/artifactory/here-olp-sit</here.olp.sit>
     </properties>
-
 </project>
