--- a/maven-wagon-installer/pom.xml
+++ b/maven-wagon-installer/pom.xml
@@ -1,25 +1,24 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <artifactId>maven-parent</artifactId>
+    <parent>
+        <artifactId>maven-parent</artifactId>
+        <groupId>com.here.platform.artifact</groupId>
+        <version>1.7.41-SNAPSHOT</version>
+    </parent>
+
+    <name>artifact-wagon-install</name>
+    <artifactId>artifact-wagon-install</artifactId>
     <groupId>com.here.platform.artifact</groupId>
     <version>1.7.41-SNAPSHOT</version>
-  </parent>
-
-  <name>artifact-wagon-install</name>
-  <artifactId>artifact-wagon-install</artifactId>
-  <groupId>com.here.platform.artifact</groupId>
-  <version>1.7.41-SNAPSHOT</version>
 
     <scm>
-        <developerConnection>scm:git:ssh://gerrit.it.here.com:29418/pa-limerick/artifact/maven-wagon-installer
-        </developerConnection>
-        <tag>HEAD</tag>
+        <connection>scm:git:https://github.com/heremaps/here-artifact-maven-wagon.git</connection>
+        <developerConnection>scm:git:git@github.com:heremaps/here-artifact-maven-wagon.git</developerConnection>
+        <url>https://github.com/heremaps/here-artifact-maven-wagon</url>
     </scm>
+
     <distributionManagement>
         <repository>
             <id>here-olp-sit</id>
@@ -36,6 +35,7 @@
     <organization>
         <name>HERE Technologies</name>
     </organization>
+
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
@@ -46,13 +46,11 @@
 
     <build>
         <plugins>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
@@ -61,13 +59,11 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>3.1.1</version>
                 <executions>
-
                     <execution>
                         <id>unpack</id>
                         <goals>
@@ -85,7 +81,6 @@
                             </artifactItems>
                         </configuration>
                     </execution>
-
                     <execution>
                         <id>copy</id>
                         <phase>package</phase>
@@ -115,13 +110,11 @@
                             </artifactItems>
                         </configuration>
                     </execution>
-
                 </executions>
                 <configuration>
                     <outputDirectory>${project.build.directory}/${dependency.output.directory}</outputDirectory>
                 </configuration>
             </plugin>
-
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.1.0</version>
@@ -132,8 +125,10 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
-                        <phase>package</phase> <!-- bind to the packaging phase -->
+                        <id>make-assembly</id>
+                        <!-- this is used for inheritance merges -->
+                        <phase>package</phase>
+                        <!-- bind to the packaging phase -->
                         <goals>
                             <goal>single</goal>
                         </goals>
@@ -145,5 +140,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
