--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,10 @@
 
     <groupId>com.here.platform.artifact</groupId>
     <artifactId>artifact-wagon</artifactId>
-    <version>2.0.0</version>
+
+    <!-- Artifact Wagon version is controller by Travis CI -->
+    <!-- Please do not change this value -->
+    <version>2.0.0-SNAPSHOT</version>
 
     <name>HERE platform Maven Wagon</name>
     <description>
