--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,24 +11,24 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[skip release]')"
 
     steps:
-    - uses: actions/checkout@v2
-      with:
-        ref: master
-        fetch-depth: 0
-    - name: Set up JDK 8
-      uses: actions/setup-java@v2
-      with:
-        java-version: '8'
-        distribution: 'adopt'
-    - name: Test
-      run: .github/scripts/test.sh
-    - name: Push git tag
-      run: .github/scripts/push-tag.sh
-    - name: Deploy Release
-      env:
-        GPG_KEY_NAME: ${{ secrets.GPG_KEY_NAME }}
-        GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-        SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-        SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-        GPG_PRIVATE_KEY: ${{ secrets.GPG_KEY }}
-      run: .github/scripts/deploy.sh
+      - uses: actions/checkout@v4
+        with:
+          ref: master
+          fetch-depth: 0
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Test
+        run: .github/scripts/test.sh
+      - name: Push git tag
+        run: .github/scripts/push-tag.sh
+      - name: Deploy Release
+        env:
+          GPG_KEY_NAME: ${{ secrets.GPG_KEY_NAME }}
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_KEY }}
+        run: .github/scripts/deploy.sh
