--- a/pom.xml
+++ b/pom.xml
@@ -47,16 +47,17 @@
     </scm>
 
     <properties>
-        <java.version>1.8</java.version>
-        <maven.wagon>3.5.1</maven.wagon>
+        <java.version>17</java.version>
+        <maven.wagon>3.5.3</maven.wagon>
         <maven.lib.dir>/usr/local/Cellar/maven/3.5.3/libexec/lib/ext</maven.lib.dir>
         <here.oauth.version>0.4.25</here.oauth.version>
-        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
-        <httpclient.version>4.5.13</httpclient.version>
-        <httpcore.version>4.4.15</httpcore.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <httpclient.version>4.5.14</httpclient.version>
+        <httpcore.version>4.4.16</httpcore.version>
         <slf4j.version>1.7.24</slf4j.version>
-        <junit.version>4.13.1</junit.version>
-        <mockito.version>1.10.19</mockito.version>
+        <junit.version>4.13.2</junit.version>
+        <mockito.version>5.12.0</mockito.version>
+        <commons-io.version>2.16.1</commons-io.version>
     </properties>
 
     <dependencies>
@@ -97,6 +98,13 @@
                     <groupId>commons-logging</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -163,7 +171,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -176,7 +184,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>3.5.0</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -197,7 +205,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
+                        <version>3.2.8</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
